testcrate/tests/ui/select.stderr
error[E0412]: cannot find type `Tble` in this scope
   --> $DIR/select.rs:148:10
    |
148 |     sql!(Tble.filter(field1 == "value"));
    |          ^^^^ did you mean `Table`?

error[E0609]: no field `field2` on type `Table`
  --> $DIR/select.rs:54:45
   |
54 |     sql!(Table.filter(field1 == "value1" && field2 < 100).sort(-field2));
   |                                             ^^^^^^ did you mean `field1`?

error[E0609]: no field `field2` on type `Table`
  --> $DIR/select.rs:54:65
   |
54 |     sql!(Table.filter(field1 == "value1" && field2 < 100).sort(-field2));
   |                                                                 ^^^^^^ did you mean `field1`?

error[E0308]: mismatched types
  --> $DIR/select.rs:60:57
   |
60 |     sql!(Table.filter(field1 == "value1" && i32_field < 100u32));
   |                                                         ^^^^^^ expected i32, found u32

error[E0308]: mismatched types
  --> $DIR/select.rs:66:57
   |
66 |     sql!(Table.filter(field1 == "value1" && i32_field < 100u32).sort(-i32_field));
   |                                                         ^^^^^^ expected i32, found u32

error[E0308]: mismatched types
  --> $DIR/select.rs:72:57
   |
72 |     sql!(Table.filter(field1 == "value1" && i32_field < 100u64));
   |                                                         ^^^^^^ expected i32, found u64

error[E0308]: mismatched types
  --> $DIR/select.rs:78:57
   |
78 |     sql!(Table.filter(field1 == "value1" && i32_field < 100i8));
   |                                                         ^^^^^ expected i32, found i8

error[E0308]: mismatched types
  --> $DIR/select.rs:84:36
   |
84 |     sql!(Table.filter(i32_field >= b'f' || field1 == 't'));
   |                                    ^^^^ expected i32, found u8

error[E0308]: mismatched types
  --> $DIR/select.rs:84:54
   |
84 |     sql!(Table.filter(i32_field >= b'f' || field1 == 't'));
   |                                                      ^^^
   |                                                      |
   |                                                      expected struct `std::string::String`, found char
   |                                                      help: try using a conversion method: `'t'.to_string()`
   |
   = note: expected type `std::string::String`
              found type `char`

error[E0308]: mismatched types
  --> $DIR/select.rs:94:36
   |
94 |     sql!(Table.filter(i32_field >= b"test"));
   |                                    ^^^^^^^ expected i32, found array of 4 elements
   |
   = note: expected type `i32`
              found type `[u8; 4]`

error[E0308]: mismatched types
   --> $DIR/select.rs:100:36
    |
100 |     sql!(Table.filter(i32_field >= r#""test""#));
    |                                    ^^^^^^^^^^^ expected i32, found struct `std::string::String`
    |
    = note: expected type `i32`
               found type `std::string::String`

error[E0308]: mismatched types
   --> $DIR/select.rs:106:36
    |
106 |     sql!(Table.filter(i32_field >= 3.141592f32));
    |                                    ^^^^^^^^^^^ expected i32, found f32

error[E0308]: mismatched types
   --> $DIR/select.rs:112:36
    |
112 |     sql!(Table.filter(i32_field >= 3.141592f64));
    |                                    ^^^^^^^^^^^ expected i32, found f64

error[E0308]: mismatched types
   --> $DIR/select.rs:118:36
    |
118 |     sql!(Table.filter(i32_field >= 3.141592));
    |                                    ^^^^^^^^ expected i32, found floating-point variable
    |
    = note: expected type `i32`
               found type `{float}`

error[E0609]: no field `fild1` on type `Table`
   --> $DIR/select.rs:124:45
    |
124 |     sql!(Table.filter(i32_field >= 42).sort(fild1));
    |                                             ^^^^^ did you mean `field1`?

error[E0609]: no field `fild1` on type `Table`
   --> $DIR/select.rs:128:46
    |
128 |     sql!(Table.filter(i32_field >= 42).sort(-fild1));
    |                                              ^^^^^ did you mean `field1`?

error[E0609]: no field `i32_fiel` on type `Table`
   --> $DIR/select.rs:132:23
    |
132 |     sql!(Table.filter(i32_fiel >= 42));
    |                       ^^^^^^^^ did you mean `i32_field`?

error[E0308]: mismatched types
   --> $DIR/select.rs:136:36
    |
136 |     sql!(Table.filter(i32_field == true));
    |                                    ^^^^ expected i32, found bool

error[E0308]: mismatched types
   --> $DIR/select.rs:142:36
    |
142 |     sql!(Table.filter(i32_field == false));
    |                                    ^^^^^ expected i32, found bool

error[E0609]: no field `test` on type `Table`
   --> $DIR/select.rs:152:27
    |
152 |     sql!(Table.all().join(test));
    |                           ^^^^ unknown field
    |
    = note: available fields are: `id`, `field1`, `i32_field`

error[E0609]: no field `field` on type `Table`
   --> $DIR/select.rs:155:27
    |
155 |     sql!(Table.all().join(field));
    |                           ^^^^^ did you mean `field1`?

error: aborting due to 21 previous errors

